# audio_program_generator

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  apg-shell.sh  apg.py  entry-run.sh  entry-test.sh  entry.sh  phrases.txt  pyproject.toml  requirements.txt  requirements.txt.maybe  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml
apg/: apg.py
audio_program_generator/: __init__.py  __main__.py  accent.py  apg.py  phrase.py  spoken_program.py
htmlcov/: status.json
misc/: RELEASE_INSTRUCTIONS.md
tests/: conftest.py  test_apg.py  test_main.py
tests/resources/: mustang.flac  phrases.txt
