[metadata]
name = audio_program_generator
version = 1.6.3
author = Jeff Wright
author_email = jeff.washcloth@gmail.com
description = Create an audio program from text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeffwright13/audio_program_generator
project_urls =
    Bug Tracker = https://github.com/jeffwright13/audio_program_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = audio_program_generator
packages = find:
python_requires = >=3.7

[options.packages.find]
where = audio_program_generator
